@@ -1,7 +1,7 @@
 #!/usr/bin/python
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/catalyst,v 1.74 2005/04/21 17:45:31 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/catalyst,v 1.75 2005/04/21 18:18:46 rocket Exp $
 
 # Maintained in full by:
 # Eric Edgar <rocket@gentoo.org>
@@ -337,4 +337,7 @@ if __name__ == "__main__":
 	
 	except CatalystError:
 		raise CatalystError,"Could not complete build"
+		sys.exit(2)
+	except KeyboardInterrupt:
+		print "\nCatalyst build aborted due to user interrupt"
 		sys.exit(2)
